tests/lean/noncomputable_lemma.lean.expected.out
noncomputable_lemma.lean:2:6: error: missing 'noncomputable' modifier, definition 'b' is not compiled
