tests/lean/noncomputable_lemma.lean
noncomputable lemma a : ℕ := 37
lemma b : ℕ := 37
